# DefensePreparation

./: .env.example  .gitignore  .markdownlintignore  README.md  pipeline.cmd  pipeline.ps1  pyproject.toml  requirements.txt
config/: config.yaml
data/: manifest.csv
src/paper_pipeline/: __init__.py  chunking.py  cleaning.py  cli.py  config.py  defense_prep.py  hashing.py  indexing.py  llm_export.py  manifest.py  metadata.py  pdf_metadata.py  pipeline.py  preflight.py  quality.py  sectioning.py  utils.py
src/paper_pipeline/converters/: __init__.py  common.py  docling_converter.py  grobid_converter.py  marker_converter.py  ocr_converter.py  pdfium_text_converter.py
tests/: test_chunking.py  test_cleaning.py  test_llm_export.py  test_manifest.py  test_pdfium_text_converter.py  test_pipeline.py  test_preflight.py  test_quality.py  test_sectioning.py
