[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defense-paper-pipeline"
version = "0.1.0"
description = "Local RAG-ready corpus pipeline for scientific PDF papers."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Philip Dickemann" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "pandas>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pypdfium2>=5.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "tqdm>=4.66",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
docling = [
  "docling>=2.0",
]
index = [
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
]
ocr = [
  "ocrmypdf>=16.0",
]
all = [
  "docling>=2.0",
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
  "ocrmypdf>=16.0",
]

[project.scripts]
paper-pipeline = "paper_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
